fix: import position, class name, z-index change: tags add: col, form remove: display flex;, comment, demo.html

--- a/src/Components/Category/Category.scss
+++ b/src/Components/Category/Category.scss
@@ -1,9 +1,10 @@
-.icon-div {
+.category {
    margin-left: 150px;
    text-align: center;
    cursor: pointer;
 
-   .icon-name {
+   .category-name {
+      display: block;
       margin-top: 4px;
       font-size: 20px;
    }
