--- a/src/Components/CategoryList/CategoryList.scss
+++ b/src/Components/CategoryList/CategoryList.scss
@@ -1,8 +1,13 @@
 .category-list {
-  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
   margin-top: 90px;
+
+  .category-row {
+    width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
