--- a/src/Components/Search/Search.scss
+++ b/src/Components/Search/Search.scss
@@ -1,8 +1,8 @@
 .search {
   height: 340px;
-  background-color: black; /* #282c34 */
+  background-color: black;
   background-size: cover;
-  z-index: 100;
+  z-index: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
